--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ ignore = "0.4.20"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_yaml = "0.9.22"
 structstruck = "0.4.1"
+uuid = { version = "1.4.0", features = ["v7", "v4"] }
